[package]
name = "except"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["android", "pam"]

[workspace.dependencies]
libc = "0.2.169"
log = "0.4.22"
pam-sys = "1.0.0-alpha5"
ring = "0.17.8"
rpassword = "7.3.1"
syslog = "7.0.0"
zbus = { version = "5.1.1", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "net", "time", "macros", "io-util"] }

[dependencies]
log = { workspace = true }
libc = { workspace = true }
pam-sys = { workspace = true }
rpassword = { workspace = true }
ring = { workspace = true }
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
reqwest = { version = "0.12.9", features = ["json"] }
zbus = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
event-listener = { version = "5.3.1" }
tracing = "0.1"
tracing-subscriber = "0.3"
